alter z-index to try to fix hover

--- a/parallaxc.css
+++ b/parallaxc.css
@@ -93,6 +93,7 @@ body,html{margin:0;padding:0;}
 .static {
 	height:auto;
 	background-color:rgba(0,0,0,0);
+	z-index:5;
 }
 .static_par_0ht{
 	height:0;
@@ -100,7 +101,7 @@ body,html{margin:0;padding:0;}
 	padding:0;
 	margin:0;
 	display:block;
-	z-index:1;
+	z-index:5;
 }
 
 /* Sets the actual background images to adorable kitties. This part is crucial. */
